--- a/AuthenticationApp/src/AuthServer/Frontend/public/index.html
+++ b/AuthenticationApp/src/AuthServer/Frontend/public/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#000000" />
-  <title>Authentication App</title>
-</head>
-<body>
-  <div id="root"></div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#000000" />
+    <title>Authentication App</title>
+    <base href="%PUBLIC_URL%/" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/devchallenges.png" />
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
-
