--- a/AuthenticationApp/src/AuthServer/Frontend/public/index.html
+++ b/AuthenticationApp/src/AuthServer/Frontend/public/index.html
@@ -9,6 +9,9 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/devchallenges.png" />
   </head>
   <body>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
     <div id="root"></div>
   </body>
 </html>
